concord_macros/tests/v5/dsl/fail/fail_old_backoff_none.stderr
error: `backoff none` was removed in v5; remove the line
 --> tests/v5/dsl/fail/fail_old_backoff_none.rs:9:13
  |
9 |             backoff none
  |             ^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_old_backoff_none.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
